--- a/css/main.css
+++ b/css/main.css
@@ -70,3 +70,19 @@ form button {
   padding: 2rem 0;
 }
 /* Styling Skip Links */
+.skip-links{
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.skip-links a{
+  position: absolute;
+  top: -3em;
+  background-color: black;
+  color:white;
+  padding: .5em 1em;
+  font-weight: bold;
+}
+.skip-links a:focus{
+  top: 0;
+}
